<resources>
    <string name="app_name">X</string>
    <string name="title_activity_home">Home</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elonmut">"@elonmut"</string>
    <string name="bccnews">"@bccnews"</string>
    <string name="emi_fukada">"I'm Emi Fukada"</string>
    <string name="you_bonjour_je_m_appelle_datz_j_ai_18_ans_je_taime_3" />
    <string name="you_hello_fukada_wanna_hangout_with_me">You: Hello Fukada. Wanna hangout with me ^^</string>
    <string name="eimi_fukada">Eimi Fukada(深田えみ)</string>
    <string name="johnny_sins">Johnny Sins</string>
    <string name="messi_lionel">Messi Lionel</string>
    <string name="messi_ancaraz_messi_ancaraz_messi_goal_goal">Messi: Ancaraz Messi Ancaraz Messi Goal Goal</string>
    <string name="potter_lucky_man">Potter Lucky Man</string>
    <string name="potter_experliamus">Potter: Experliamus !</string>
    <string name="the_experliamus">The: Experliamus !</string>
    <string name="the_boy_who_lived">The boy who lived.</string>
    <string name="you_i_m_gonna_block_your_account_for_no_reason">You: I\'m gonna block your account for no reason.</string>
    <string name="jack_dorsey">Jack Dorsey</string>
    <string name="profile">Profile</string>
    <string name="bookmark">Bookmarks</string>
    <string name="list">Lists</string>
    <string name="space">Spaces</string>
    <string name="money">Monetization\n</string>
    <string name="help">Help Center</string>
    <string name="settings_and_privacy">Settings and Privacy</string>
    <string name="settings_and_support">Settings and Support</string>
    <string name="description_flood1">The process of flood drainage and reduction on the Red River system is progressing slowly, resulting in continued flooding in low-lying areas, floodplains outside the main dikes in the provinces/cities of: Hanoi, Ninh Binh, Hai Duong...</string>
    <string name="description_traffic">Hanoi after the rain is... traffic jams.</string>
    <string name="description_flood2">The extended swimming race begins...on Thai Ha Street after a night of heavy rain in Hanoi.</string>
    <string name="description_yagiQN">After Typhoon No. 3, preliminary estimates suggest that Quang Ninh suffered losses of about 23.770 trillion VND, accounting for more than half of the total damage nationwide.</string>
    <string name="ElonMusk">I\'m Elon Musk, and my mission is to push humanity forward. Whether it\'s building electric cars, colonizing Mars, or revolutionizing energy, I believe in solving problems that matter. The future is ours to create, one bold step at a time.</string>
    <string name="tokuda">Life doesn\'t stop at any age, and neither should we. 🌸 I\'ve embraced every chapter, proving that passion and curiosity can last a lifetime. 🧡 No matter where you are or how old you are, always pursue what excites you. ✨ Every day is a chance to learn, grow, and inspire others. 💪 It’s never too late to chase your dreams and do what you love. 🌼</string>
    <string name="inbox_setting_1">Allow message requests from:</string>
    <string name="inbox_setting_2">People you follow will always be able to message you.</string>
    <string name="harmful_trend">This trend is harmful or spammy</string>
    <string name="not_interested">Not interested in this</string>
    <string name="inbox_setting_3">Learn more\n</string>
    <string name="inbox_setting_4">No one</string>
    <string name="inbox_setting_5">Verified users</string>
    <string name="inbox_setting_6">Everyone</string>
    <string name="inbox_setting_7">Enable audio and video calling</string>
    <string name="title_activity_explore_settings">ExploreSettings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_notification_settings">NotificationSettings</string>
    <string name="inbox_setting_8">Take messaging to the next level with audio and video calls. When enabled you can select who you\'re comfotable using it with.</string>
    <string name="inbox_setting_9">Send read receipts</string>
    <string name="inbox_setting_10">Let people you\'re messaging with know when you\'ve seen their messages. Read receipts are not shown on message requests.</string>
    <string name="inbox_setting_11">Manage encrypted devices</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>