<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InboxFragment"
    android:orientation="vertical"
    android:background="@color/black">

    <!--header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="horizontal"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/avatar" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:padding="16dp"
            android:text="Messages"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_settings_24" />

    </LinearLayout>

    <!--search messages-->
    <Button
        android:id="@+id/textViewSearch"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="#2f2f2f"
        android:text="Search direct messages"
        android:textColor="#202020"
        android:textSize="11sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/black"/>

    <!--INBOX-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">
        <!--receiver avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/fukada" />
        <!--chat box-->
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/eimi_fukada"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/you_hello_fukada_wanna_hangout_with_me"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:textStyle="normal"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--INBOX-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">
        <!--receiver avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/johnnysins" />
        <!--chat box-->
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/johnny_sins"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="You: Just want to tell you that ilysm"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:textStyle="normal"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--INBOX-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">
        <!--receiver avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/messi" />
        <!--chat box-->
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/messi_lionel"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Messi: Mes que un club "
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:textStyle="normal"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--INBOX-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">
        <!--receiver avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/potter" />
        <!--chat box-->
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/the_boy_who_lived"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/the_experliamus"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:textStyle="normal"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--INBOX-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">
        <!--receiver avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/jackdorsey" />
        <!--chat box-->
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/jack_dorsey"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/you_i_m_gonna_block_your_account_for_no_reason"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:textStyle="normal"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>